# polkastream

./: .gitignore  Cargo.toml  README.md  lib.rs  polkastream_simulation.sh
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
polkastream/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs
polkastream/src/: App.jsx  contractInfo.js  index.css
polkastream/src/components/: CreateStreamForm.jsx  Header.jsx  Hero.jsx  StreamCard.jsx  StreamList.jsx
