[package]
name = "polkadot_stream"
version = "0.1.0"
authors = ["ola-893 mharvehll@gmail.com"]
edition = "2021"

[dependencies]
ink = { version = "5.1", default-features = false }

[dev-dependencies]
ink_e2e = "5.1"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []